# aoc2022-haskell

./: .gitignore  LICENSE  README.md  aoc2022.cabal
app/: Main.hs
src/: Prelube.hs
src/Solutions/: Day01.hs  Day02.hs  Day03.hs  Day05.hs  Day07.hs  Day09.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day2.hs
